# Copyright (c) 2020 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/lite/config/component/lite_component.gni")

lite_component("app") {
    features = [
        # "A1_kernal_thread:thread_example",
        # "A2_kernel_timer:timer_example",
        # "A3_kernel_event:event_example",
        # "A4_kernel_mutex:mutex_example",
        # "A5_kernel_semaphore:semaphore_example",
        # "A6_kernel_message:message_example",

        # "B1_basic_led_blink:led_example",
        # "B2_basic_button:button_example",
        # "B3_basic_pwm_led:pwm_example",
        # "B4_basic_adc:adc_example", 
        # "B5_basic_i2c_nfc:i2c_example",
        # "B6_basic_uart:uart_example",

        # "C1_e53_sf1_mq2:e53_sf1_example",
        # "C2_e53_ia1_temp_humi_pls:e53_ia1_example",
        # "C3_e53_sc1_pls:e53_sc1_example",
        # "C4_e53_sc2_axis:e53_sc2_example",
        # "C5_e53_is1_infrared:e53_is1_example",

        # "D1_iot_wifi_ap:wifi_ap",
        # "D2_iot_wifi_sta_connect:wifi_sta_connect",        
        # "D3_iot_udp_client:udp_client",
        # "D4_iot_tcp_server:tcp_server",
        # "D5_iot_mqtt:iot_mqtt",        
        # "D6_iot_cloud_oc:oc_mqtt",
        # "D7_iot_cloud_oc_smoke:cloud_oc_smoke",
        # "D8_iot_cloud_oc_light:cloud_oc_light",
        # "D9_iot_cloud_oc_manhole_cover:cloud_oc_manhole_cover",
        # "D10_iot_cloud_oc_infrared:cloud_oc_infrared",
        # "D11_iot_cloud_oc_agriculture:cloud_oc_agriculture",
        # "D12_iot_cloud_oc_gps:cloud_oc_gps",

        # "startup",
        # "02_KP_OS_Task:task_test",
        # "03_KP_OS_Mutex:mutex_test",
        # "04_KP_OS_Timer:timer_test",
        # "05_KP_OS_Event:event_test",
        # "06_KP_OS_Semp:semp_test",
        # "07_KP_OS_Message:msg_test",

        # "KP_I2C_NFC:i2c_nfc",
        # "KP_UART:uart_test",
        # "KP_MQ2_example:MQ2_test",
        # "KP_LCD_example:lcd_test",
        # "KP_SHT30_example:motor_module",
        # "KP_SC7A20_example:triaxial_module",
        # "KP_INFRARED_example:infrared_module",
        # "KP_SmartDoor_example:SmartDoor_module",
        # "KP_HeartRate_example:heartRate_module",
        # "KP_GPS_example:gps_module",
        # "KP_MQ7_example:combustible_module",
        "temp_humi:temp_humi"
    ]
}
